-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
6.8, 6.9, 6.10
-
None
-
-
1ecc17089 (dev), 312215ba8 (dev), 6ef8da2c4 (6.9), 654c0af53 (tqtc/lts-6.8)
DKM has not been supported in Qt for VxWorks 5.15 and not it 6.x, all the DKM related code should be removed.
#if defined(Q_OS_VXWORKS) && defined(VXWORKS_DKM)
// for other scheduling policies than SCHED_RR or SCHED_FIFO
prio_min = SCHED_FIFO_LOW_PRI;
prio_max = SCHED_FIFO_HIGH_PRI; if ((*sched_policy == SCHED_RR) || (*sched_policy == SCHED_FIFO))
#endif
{{}}
| For Gerrit Dashboard: QTBUG-136722 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 645264,2 | Remove VxWorks DKM check from QThreads | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 645808,2 | Remove VxWorks DKM check from QThreads | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
| 645894,2 | Remove VxWorks DKM check from QThreads | tqtc/lts-6.8 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |