Remove VxWorks DKM check from QThreads

Qt doesn't support VxWorks DKM since 4.8, removing DKM specific check,
so it is the same as in Qt for VxWorks 5.15.

Pick-to: 6.8
Task-number: QTBUG-136722
Change-Id: I86cf54e8eadbb78365b7c58cb72b0675714fb37a
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit 312215ba87b00b0065babe1cf190980e2d9dbc4a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>